deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kerberos-webapp
  labels:
    app.kubernetes.io/name: kerberos-webapp
